Dark mode link color issue sorted

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,17 @@ body {
      
 }
 
+.dark-mode {
+    background-color: black;
+    color: white;
+    
+  }
 
+.dark-mode a {
+
+    color: white;
+
+}
 
 footer {
     clear: both;
@@ -39,16 +49,14 @@ footer {
 }
 
 a {
-    color: black;
+    color: black; 
 
 }
 
-.dark-mode {
-    background-color: black;
-    color: white;
-  }
 
-  .flexybooks {
+
+
+.flexybooks {
     display: flex;
     flex-wrap: wrap;
     width: 650px;
@@ -66,6 +74,5 @@ a {
     margin-top: 25px;
     border: 2px solid black;
     border-radius: 15px;
-    
 
 }
